Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -12,8 +12,8 @@ brew "cairo"
 brew "graphite2"
 brew "harfbuzz"
 brew "icu4c@76"
-brew "openssl@3"
 brew "apache-spark"
+brew "openssl@3"
 brew "autoconf"
 brew "autojump"
 brew "automake"
@@ -46,6 +46,7 @@ brew "fribidi"
 brew "fzf"
 brew "gd"
 brew "gdk-pixbuf"
+brew "gh"
 brew "git"
 brew "git-filter-repo"
 brew "git-lfs"
@@ -133,6 +134,7 @@ cask "alfred"
 cask "android-file-transfer"
 cask "arc"
 cask "aws-vault"
+cask "bruno"
 cask "caffeine"
 cask "chromium"
 cask "claude"
@@ -178,48 +180,3 @@ mas "Pages", id: 409201541
 mas "Pixelmator Pro", id: 1289583905
 mas "Toggl Track", id: 1291898086
 mas "Xcode", id: 497799835
-vscode "docker.docker"
-vscode "dotjoshjohnson.xml"
-vscode "eamodio.gitlens"
-vscode "editorconfig.editorconfig"
-vscode "elmtooling.elm-ls-vscode"
-vscode "github.copilot"
-vscode "github.copilot-chat"
-vscode "gitlab.gitlab-workflow"
-vscode "golang.go"
-vscode "hashicorp.terraform"
-vscode "hbenl.vscode-test-explorer"
-vscode "jock.svg"
-vscode "k--kato.intellij-idea-keybindings"
-vscode "mechatroner.rainbow-csv"
-vscode "mikestead.dotenv"
-vscode "ms-azuretools.vscode-docker"
-vscode "ms-dotnettools.csharp"
-vscode "ms-dotnettools.vscode-dotnet-runtime"
-vscode "ms-python.black-formatter"
-vscode "ms-python.debugpy"
-vscode "ms-python.isort"
-vscode "ms-python.python"
-vscode "ms-python.vscode-pylance"
-vscode "ms-toolsai.jupyter"
-vscode "ms-toolsai.jupyter-keymap"
-vscode "ms-toolsai.jupyter-renderers"
-vscode "ms-toolsai.vscode-jupyter-cell-tags"
-vscode "ms-toolsai.vscode-jupyter-slideshow"
-vscode "ms-vscode-remote.remote-containers"
-vscode "ms-vscode.test-adapter-converter"
-vscode "phplasma.csv-to-table"
-vscode "redhat.fabric8-analytics"
-vscode "redhat.java"
-vscode "redhat.vscode-yaml"
-vscode "shopify.ruby-lsp"
-vscode "simonsiefke.svg-preview"
-vscode "skyapps.fish-vscode"
-vscode "visualstudioexptteam.intellicode-api-usage-examples"
-vscode "visualstudioexptteam.vscodeintellicode"
-vscode "vscjava.vscode-gradle"
-vscode "vscjava.vscode-java-debug"
-vscode "vscjava.vscode-java-dependency"
-vscode "vscjava.vscode-java-pack"
-vscode "vscjava.vscode-java-test"
-vscode "vscjava.vscode-maven"
