Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -5,15 +5,19 @@ tap "rbenv/tap"
 tap "warrensbox/tap"
 brew "ack"
 brew "adns"
-brew "lz4"
 brew "glib"
 brew "lzo"
 brew "cairo"
+brew "fribidi"
+brew "gmp"
+brew "lz4"
+brew "gcc"
 brew "graphite2"
 brew "harfbuzz"
+brew "openssl@3"
+brew "aider"
 brew "icu4c@76"
 brew "apache-spark"
-brew "openssl@3"
 brew "autoconf"
 brew "autojump"
 brew "automake"
@@ -22,8 +26,6 @@ brew "awscli"
 brew "bash"
 brew "bat"
 brew "bfg"
-brew "gmp"
-brew "gcc"
 brew "cbc"
 brew "chruby"
 brew "ruby"
@@ -42,7 +44,6 @@ brew "docker-credential-helper-ecr"
 brew "fd"
 brew "fish"
 brew "libtool"
-brew "fribidi"
 brew "fzf"
 brew "gd"
 brew "gdk-pixbuf"
@@ -169,6 +170,7 @@ cask "slack"
 cask "tableplus"
 cask "textual"
 cask "visual-studio-code"
+cask "vlc"
 cask "webex"
 cask "whatsapp"
 cask "zoom"
@@ -180,3 +182,4 @@ mas "Pages", id: 409201541
 mas "Pixelmator Pro", id: 1289583905
 mas "Toggl Track", id: 1291898086
 mas "Xcode", id: 497799835
+vscode "k--kato.intellij-idea-keybindings"
