Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -107,6 +107,7 @@ brew "s3cmd"
 brew "sbt"
 brew "scala"
 brew "shared-mime-info"
+brew "snyk-cli"
 brew "socat"
 brew "spatialindex"
 brew "sshuttle"
@@ -173,6 +174,7 @@ cask "visual-studio-code"
 cask "vlc"
 cask "webex"
 cask "whatsapp"
+cask "zen"
 cask "zoom"
 mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
