Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -4,13 +4,14 @@ tap "homebrew/services"
 tap "rbenv/tap"
 tap "warrensbox/tap"
 brew "ack"
+brew "gmp"
+brew "actionlint"
 brew "adns"
+brew "lz4"
 brew "glib"
 brew "lzo"
 brew "cairo"
 brew "fribidi"
-brew "gmp"
-brew "lz4"
 brew "gcc"
 brew "graphite2"
 brew "harfbuzz"
@@ -26,6 +27,7 @@ brew "bash"
 brew "bat"
 brew "icu4c@76"
 brew "bfg"
+brew "blueutil"
 brew "cbc"
 brew "chruby"
 brew "ruby"
@@ -87,6 +89,7 @@ brew "mas"
 brew "maven"
 brew "mise"
 brew "mysql"
+brew "ollama", restart_service: :changed
 brew "openjdk@11"
 brew "openldap"
 brew "p7zip"
@@ -96,7 +99,6 @@ brew "php"
 brew "pinentry-mac"
 brew "poppler"
 brew "postgresql@12"
-brew "pre-commit"
 brew "pth"
 brew "pyenv"
 brew "pyenv-virtualenv"
@@ -128,6 +130,7 @@ brew "vim"
 brew "visidata"
 brew "wget"
 brew "xsv"
+brew "yamllint"
 brew "yarn"
 brew "alajmo/mani/mani"
 brew "rbenv/tap/openssl@1.0"
@@ -136,7 +139,7 @@ cask "1password-cli"
 cask "alfred"
 cask "android-file-transfer"
 cask "arc"
-cask "aws-vault"
+cask "aws-vault-binary"
 cask "bruno"
 cask "caffeine"
 cask "chromium"
@@ -145,7 +148,7 @@ cask "cursor"
 cask "daisydisk"
 cask "discord"
 cask "firefox"
-cask "flux"
+cask "flux-app"
 cask "font-fira-code"
 cask "font-fira-code-nerd-font"
 cask "font-open-sans"
@@ -162,7 +165,7 @@ cask "mongodb-compass"
 cask "ngrok"
 cask "obsidian"
 cask "openvpn-connect"
-cask "pop"
+cask "pop-app"
 cask "postman"
 cask "rectangle"
 cask "rize"
