Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -151,7 +151,6 @@ cask "discord"
 cask "firefox"
 cask "flux-app"
 cask "font-fira-code"
-cask "font-fira-code-nerd-font"
 cask "font-open-sans"
 cask "font-powerline-symbols"
 cask "font-source-code-pro"
@@ -192,3 +191,4 @@ mas "Xcode", id: 497799835
 vscode "github.copilot"
 vscode "github.copilot-chat"
 vscode "k--kato.intellij-idea-keybindings"
+vscode "ms-azuretools.vscode-containers"
