Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -117,6 +117,7 @@ brew "spatialindex"
 brew "sshuttle"
 brew "step"
 brew "subversion"
+brew "switchaudio-osx"
 brew "tcl-tk"
 brew "telnet"
 brew "terminal-notifier"
@@ -161,6 +162,7 @@ cask "jetbrains-toolbox"
 cask "logitech-options"
 cask "microsoft-auto-update"
 cask "microsoft-teams"
+cask "miniconda"
 cask "mongodb-compass"
 cask "ngrok"
 cask "obsidian"
@@ -192,3 +194,7 @@ vscode "github.copilot"
 vscode "github.copilot-chat"
 vscode "k--kato.intellij-idea-keybindings"
 vscode "ms-azuretools.vscode-containers"
+vscode "ms-python.debugpy"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
+vscode "ms-python.vscode-python-envs"
