--- a/alfred/Alfred.alfredpreferences/workflows/user.workflow.1D1DC871-600A-4EEA-9D43-F8E56726CE23/info.plist
+++ b/alfred/Alfred.alfredpreferences/workflows/user.workflow.1D1DC871-600A-4EEA-9D43-F8E56726CE23/info.plist
@@ -162,6 +162,10 @@
 				<false/>
 				<key>focusedappvariablename</key>
 				<string></string>
+				<key>hotkey</key>
+				<integer>0</integer>
+				<key>hotmod</key>
+				<integer>0</integer>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
@@ -243,7 +247,7 @@
 				<key>trimarguments</key>
 				<true/>
 				<key>variableprefix</key>
-				<string>address_or_state</string>
+				<string>address_state_and_device_name</string>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.utility.split</string>
