Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -166,9 +166,11 @@ cask "microsoft-auto-update"
 cask "microsoft-teams"
 cask "mongodb-compass"
 cask "obsidian"
+cask "opensuperwhisper"
 cask "openvpn-connect"
 cask "pop-app"
 cask "postman"
+cask "quickwhisper"
 cask "rectangle"
 cask "shortcat"
 cask "shortcutdetective"
@@ -197,3 +199,4 @@ vscode "ms-python.debugpy"
 vscode "ms-python.python"
 vscode "ms-python.vscode-pylance"
 vscode "ms-python.vscode-python-envs"
+vscode "tintinweb.graphviz-interactive-preview"
