Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -103,6 +103,7 @@ brew "php"
 brew "pinentry-mac"
 brew "poppler"
 brew "postgresql@12"
+brew "pre-commit"
 brew "pth"
 brew "pyenv"
 brew "pyenv-virtualenv"
