Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -8,15 +8,14 @@ brew "gmp"
 brew "actionlint"
 brew "adns"
 brew "lz4"
+brew "gcc"
+brew "openssl@3"
+brew "aider"
 brew "glib"
 brew "lzo"
 brew "cairo"
-brew "fribidi"
-brew "gcc"
 brew "graphite2"
 brew "harfbuzz"
-brew "openssl@3"
-brew "aider"
 brew "apache-spark"
 brew "autoconf"
 brew "autojump"
@@ -46,6 +45,7 @@ brew "docker-credential-helper-ecr"
 brew "fd"
 brew "fish"
 brew "libtool"
+brew "fribidi"
 brew "fzf"
 brew "gd"
 brew "gdk-pixbuf"
@@ -201,3 +201,5 @@ vscode "ms-python.python"
 vscode "ms-python.vscode-pylance"
 vscode "ms-python.vscode-python-envs"
 vscode "tintinweb.graphviz-interactive-preview"
+go "golang.org/x/tools/gopls"
+go "honnef.co/go/tools/cmd/staticcheck"
