Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -148,7 +148,7 @@ cask "aws-vault-binary"
 cask "bruno"
 cask "caffeine"
 cask "chromium"
-cask "claude"
+cask "claude-code"
 cask "cursor"
 cask "daisydisk"
 cask "discord"
