--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -165,6 +165,7 @@ cask "logitech-options"
 cask "microsoft-auto-update"
 cask "microsoft-teams"
 cask "mongodb-compass"
+cask "obs"
 cask "obsidian"
 cask "opensuperwhisper"
 cask "openvpn-connect"
