Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -43,9 +43,12 @@ brew "docker-buildx"
 brew "docker-compose"
 brew "docker-credential-helper-ecr"
 brew "fd"
+brew "fribidi"
+brew "libidn2"
+brew "gnutls"
+brew "ffmpeg"
 brew "fish"
 brew "libtool"
-brew "fribidi"
 brew "fzf"
 brew "gd"
 brew "gdk-pixbuf"
@@ -59,8 +62,6 @@ brew "git-secrets"
 brew "git-sizer"
 brew "gitleaks"
 brew "gnu-getopt"
-brew "libidn2"
-brew "gnutls"
 brew "pinentry"
 brew "gnupg"
 brew "go"
@@ -134,6 +135,7 @@ brew "viddy"
 brew "vim"
 brew "visidata"
 brew "wget"
+brew "whisper-cpp"
 brew "xsv"
 brew "yamllint"
 brew "yarn"
@@ -148,6 +150,7 @@ cask "aws-vault-binary"
 cask "bruno"
 cask "caffeine"
 cask "chromium"
+cask "copilot-cli"
 cask "cursor"
 cask "daisydisk"
 cask "discord"
@@ -171,6 +174,7 @@ cask "opensuperwhisper"
 cask "openvpn-connect"
 cask "pop-app"
 cask "postman"
+cask "qobuz"
 cask "quickwhisper"
 cask "rectangle"
 cask "shortcat"
