Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -17,6 +17,8 @@ brew "cairo"
 brew "graphite2"
 brew "harfbuzz"
 brew "apache-spark"
+brew "ruby"
+brew "asciidoctor"
 brew "autoconf"
 brew "autojump"
 brew "automake"
@@ -29,7 +31,6 @@ brew "bfg"
 brew "blueutil"
 brew "cbc"
 brew "chruby"
-brew "ruby"
 brew "cocoapods"
 brew "lima"
 brew "colima"
@@ -131,6 +132,7 @@ brew "tldr"
 brew "travis"
 brew "tree"
 brew "uv"
+brew "vale"
 brew "viddy"
 brew "vim"
 brew "visidata"
@@ -156,6 +158,10 @@ cask "daisydisk"
 cask "discord"
 cask "firefox"
 cask "flux-app"
+cask "font-alegreya"
+cask "font-alegreya-sans"
+cask "font-alegreya-sans-sc"
+cask "font-eb-garamond"
 cask "font-fira-code"
 cask "font-open-sans"
 cask "font-powerline-symbols"
