Updated brewfile on Broly.local

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -44,12 +44,10 @@ brew "docker-buildx"
 brew "docker-compose"
 brew "docker-credential-helper-ecr"
 brew "fd"
-brew "fribidi"
-brew "libidn2"
-brew "gnutls"
 brew "ffmpeg"
 brew "fish"
 brew "libtool"
+brew "fribidi"
 brew "fzf"
 brew "gd"
 brew "gdk-pixbuf"
@@ -63,6 +61,8 @@ brew "git-secrets"
 brew "git-sizer"
 brew "gitleaks"
 brew "gnu-getopt"
+brew "libidn2"
+brew "gnutls"
 brew "pinentry"
 brew "gnupg"
 brew "go"
@@ -203,6 +203,7 @@ mas "Pages", id: 409201541
 mas "Pixelmator Pro", id: 1289583905
 mas "Toggl Track", id: 1291898086
 mas "Xcode", id: 497799835
+vscode "asciidoctor.asciidoctor-vscode"
 vscode "github.copilot"
 vscode "github.copilot-chat"
 vscode "github.vscode-pull-request-github"
